# gtfs2geojson

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: demo.geojson  demo.html  demo.py
gtfs2geojson/: __init__.py  __main__.py  converter.py  preview.py
tests/: conftest.py  test_cli.py  test_format.py  test_introspect.py  test_preview.py  test_reconstruction_fallback.py  test_service_date.py  test_simplify.py  test_smoke.py  test_stats.py  test_stop_routes.py  test_warnings.py
