[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtfs2geojson"
version = "0.3.0"
description = "Convert GTFS feeds to GeoJSON with optional Folium preview maps."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "acesonic7" }]
keywords = ["gtfs", "geojson", "transit", "public-transport", "geospatial", "folium"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = []

[project.optional-dependencies]
preview = ["folium>=0.14"]
dev = ["folium>=0.14", "pytest>=7"]

[project.scripts]
gtfs2geojson = "gtfs2geojson.__main__:main"

[project.urls]
Homepage = "https://github.com/acesonic7/gtfs2geojson"
Issues = "https://github.com/acesonic7/gtfs2geojson/issues"

[tool.setuptools.packages.find]
include = ["gtfs2geojson*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
